src/objects/UniversityCourse__c.object
<CustomObject>
    <description>CORE adopted from UKHE - Courses linked to Universities</description>
    <fields>
        <fullName>Account_TYpe_abbb__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account TYpe abbb</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Account_course_Level__c</fullName>
        <label>Account course Level</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postgraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper-Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To show whether a University Course is Active or Not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adoption_Type__c</fullName>
        <description>Indicates whether the University Course Products in Use is decided by a Committee or Individual</description>
        <label>Adoption Type</label>
        <picklist>
            <picklistValues>
                <fullName>Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Choice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Catalog_Code__c</fullName>
        <label>Catalog Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Classifies the university course.</description>
        <inlineHelpText>Classifies the university course.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <label>Course Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Name of the course at the university or department.</description>
        <inlineHelpText>Name of the course at the university or department.</inlineHelpText>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Territory_Code_s__c</fullName>
        <formula>Account__r.Territory_Code_s__c</formula>
        <label>Course Territory Code(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_URL__c</fullName>
        <description>Website that provides more information about the course.</description>
        <inlineHelpText>Website that provides more information about the course.</inlineHelpText>
        <label>Course URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fall_Course_Start_Date__c</fullName>
        <description>Course Start date for the fall semester.</description>
        <inlineHelpText>Course Start date for the fall semester.</inlineHelpText>
        <label>Fall Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fall_Enrollment__c</fullName>
        <description>Course enrollment for the fall semester.</description>
        <inlineHelpText>Course enrollment for the fall semester.</inlineHelpText>
        <label>Fall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fall_Front_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fall Front List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <externalId>true</externalId>
        <label>ImportID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mass_Sampling__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Selected by Administrator for courses that require mass digital sampling for all attached products when the Opportunity is created.</description>
        <label>Mass Sampling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <description>Classifies the university course within each category.</description>
        <inlineHelpText>Classifies the university course within each category.</inlineHelpText>
        <label>Module Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Core</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Elective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <label>Opportunity Count</label>
        <summaryForeignKey>OpportunityUniversityCourse__c.UniversityCourse__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>Display Parent Account of Department on the University Course</description>
        <formula>HYPERLINK( Account__r.Parent.Id, Account__r.Parent.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <description>Pulls the information from the Primary Selling Account field on the Account</description>
        <formula>HYPERLINK(Account__r.Primary_Selling_Account__r.Id,  Account__r.Primary_Selling_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_aaaa__c</fullName>
        <label>Private aaaa</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spring_Course_Start_Date__c</fullName>
        <description>Course start date for the spring semester.</description>
        <inlineHelpText>Course start date for the spring semester.</inlineHelpText>
        <label>Spring Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spring_Enrollment__c</fullName>
        <description>Course enrollment for the spring semester.</description>
        <inlineHelpText>Course enrollment for the spring semester.</inlineHelpText>
        <label>Spring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spring_Front_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spring Front List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>To show whether a University Course is Active or Not</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summer_Enrollment__c</fullName>
        <description>Course Enrollment for the Summer Semester</description>
        <inlineHelpText>Course Enrollment for the Summer Semester</inlineHelpText>
        <label>Summer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TempRefID__c</fullName>
        <description>[HH- Remove before deployment] Temp to support Data Migration from Dev2</description>
        <externalId>true</externalId>
        <label>Temp-RefID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Enrollments__c</fullName>
        <label>Total Enrollments</label>
        <summarizedField>Intake__c.Enrollments__c</summarizedField>
        <summaryForeignKey>Intake__c.University_Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UniversityCourseAccountComboStrId__c</fullName>
        <description>Stores the combination of the ids of the account &amp; university course.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores the combination of the ids of the account &amp; university course.</inlineHelpText>
        <label>UniversityCourseAccountComboStrId</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>University_Course_Name__c</fullName>
        <description>Name of the course at the university or department.</description>
        <inlineHelpText>Name of the course at the university or department.</inlineHelpText>
        <label>University Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winter_Enrollment__c</fullName>
        <description>Course Enrollment for the Winter Semester</description>
        <inlineHelpText>Course Enrollment for the Winter Semester</inlineHelpText>
        <label>Winter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Module_Type__c</columns>
        <columns>Total_Enrollments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Module_Type__c</columns>
        <columns>Total_Enrollments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Account 1007</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Courses_US_HE</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Adoption_Type__c</columns>
        <columns>Fall_Enrollment__c</columns>
        <columns>Spring_Enrollment__c</columns>
        <columns>Summer_Enrollment__c</columns>
        <columns>Winter_Enrollment__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UniversityCourse__c.Course_Record_Type</value>
        </filters>
        <label>All Courses-US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Fall_Courses_US_HE</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Adoption_Type__c</columns>
        <columns>Spring_Enrollment__c</columns>
        <columns>Summer_Enrollment__c</columns>
        <columns>Fall_Enrollment__c</columns>
        <columns>Winter_Enrollment__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fall_Enrollment__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UniversityCourse__c.Course_Record_Type</value>
        </filters>
        <label>All Fall Courses-US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Spring_Courses_US_HE</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Adoption_Type__c</columns>
        <columns>Spring_Enrollment__c</columns>
        <columns>Summer_Enrollment__c</columns>
        <columns>Fall_Enrollment__c</columns>
        <columns>Winter_Enrollment__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Spring_Enrollment__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UniversityCourse__c.Course_Record_Type</value>
        </filters>
        <label>All Spring Courses-US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Summer_Courses_US_HE</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Adoption_Type__c</columns>
        <columns>Spring_Enrollment__c</columns>
        <columns>Summer_Enrollment__c</columns>
        <columns>Fall_Enrollment__c</columns>
        <columns>Winter_Enrollment__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Summer_Enrollment__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UniversityCourse__c.Course_Record_Type</value>
        </filters>
        <label>All Summer Courses-US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Winter_Courses_US_HE</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Adoption_Type__c</columns>
        <columns>Spring_Enrollment__c</columns>
        <columns>Summer_Enrollment__c</columns>
        <columns>Fall_Enrollment__c</columns>
        <columns>Winter_Enrollment__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Winter_Enrollment__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UniversityCourse__c.Course_Record_Type</value>
        </filters>
        <label>All Winter Courses-US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Catalog Code - Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <recordTypes>
        <fullName>Course_Record_Type</fullName>
        <active>true</active>
        <description>Utilized by US profiles to ensure no harm approach of OneCRM</description>
        <label>Course Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enrollments_cant_be_negative</fullName>
        <active>true</active>
        <description>Enrollment Values cannot be negative values</description>
        <errorConditionFormula>(Fall_Enrollment__c &lt; 0) || (Winter_Enrollment__c &lt; 0) || (Summer_Enrollment__c &lt; 0) || ( Spring_Enrollment__c &lt;0)</errorConditionFormula>
        <errorMessage>Enrollment value cannot be a negative value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_HEUK_PreventSameUnivCourseToAccount</fullName>
        <active>true</active>
        <description>Prevent creation of the university code more than once against the account.</description>
        <errorConditionFormula>!$Setup.Bypass_Settings__c.Disable_Validation_Rules__c &amp;&amp; VLOOKUP( $ObjectType.UniversityCourse__c.Fields.UniversityCourseAccountComboStrId__c , $ObjectType.UniversityCourse__c.Fields.Name , Name + &apos;-&apos; + Account__c) = Name + &apos;-&apos; + left(Account__c,15)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>University course already exists against the account.</errorMessage>
    </validationRules>
</CustomObject>